# Cmake-example

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
Adder/: adder.cpp
